# Bandai-Namco-Research-Motiondataset

./: .gitignore  process_raw.py  pyproject.toml  test.py
config/: matplotlibrc  settings.py
model/: model.py
notebooks/: mlp.ipynb  style_few_shot.ipynb
position/: dataset-1_bow_active_001_pos.csv  dataset-1_bow_childish_001_pos.csv  dataset-1_bow_chimpira_001_pos.csv  dataset-1_bow_feminine_001_pos.csv  dataset-1_bow_musical_001_pos.csv  dataset-1_bow_proud_001_pos.csv  dataset-1_bow_sad_001_pos.csv  dataset-1_bow_tired_001_pos.csv  dataset-1_bye_childish_001_pos.csv  dataset-1_bye_happy_001_pos.csv  dataset-1_bye_musical_001_pos.csv  dataset-1_bye_normal_001_pos.csv  dataset-1_bye_not-confident_001_pos.csv  dataset-1_byebye_active_001_pos.csv  dataset-1_byebye_childish_001_pos.csv  dataset-1_byebye_feminine_001_pos.csv  dataset-1_byebye_happy_001_pos.csv  dataset-1_byebye_normal_001_pos.csv  dataset-1_byebye_not-confident_001_pos.csv  dataset-1_byebye_proud_001_pos.csv  dataset-1_byebye_tired_001_pos.csv  dataset-1_call_normal_002_pos.csv  dataset-1_dance-long_normal_001_pos.csv  dataset-1_dash_active_001_pos.csv  dataset-1_dash_chimpira_001_pos.csv  dataset-1_dash_feminine_001_pos.csv  dataset-1_dash_happy_001_pos.csv  dataset-1_dash_old_001_pos.csv  dataset-1_dash_proud_001_pos.csv  dataset-1_dash_tired_001_pos.csv  dataset-1_guide_angry_001_pos.csv  dataset-1_guide_musical_001_pos.csv  dataset-1_guide_normal_001_pos.csv  dataset-1_guide_old_001_pos.csv  dataset-1_guide_proud_001_pos.csv  dataset-1_guide_sad_001_pos.csv  dataset-1_punch_normal_001_pos.csv  (+46 more)
(+448 files in other folders)
